syntax = "proto3";

package approval;

option java_package = "approval";
option java_multiple_files = true;
option java_outer_classname = "ApprovalOuterClass";

service Approval {
  rpc RequestApproval(ApprovalRequest) returns (ApprovalResponse);
  rpc ReturnApprovalResult(ApprovalResultRequest) returns (ApprovalResultResponse);
}

message Step {
  int32 step = 1;
  int32 approverId = 2;
  string status = 3;
}

message ApprovalRequest {
  int32 requestId = 1;
  int32 requesterId = 2;
  string title = 3;
  string content = 4;
  repeated Step steps = 5;
}

message ApprovalResponse {
  string status = 1;
}

message ApprovalResultRequest {
  int32 requestId = 1;
  int32 step = 2;
  int32 approverId = 3;
  string status = 4;
}

message ApprovalResultResponse {
  string status = 1;
}